deployments/kubernetes/controller/examples/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arca-dns-controller
spec:
  ingressClassName: nginx
  rules:
    - host: controller.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: arca-dns-controller
                port:
                  number: 8080
